demos/graphing_calculator/parser.js
peg_parser = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "additive": parse_additive,
        "multiplicative": parse_multiplicative,
        "number": parse_number,
        "primary": parse_primary,
        "start": parse_start
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var cacheKey = 'start@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos4 = pos;
        var savedPos5 = pos;
        var result62 = [];
        if (input.substr(pos, 1) === " ") {
          var result66 = " ";
          pos += 1;
        } else {
          var result66 = null;
          if (reportMatchFailures) {
            matchFailed("\" \"");
          }
        }
        while (result66 !== null) {
          result62.push(result66);
          if (input.substr(pos, 1) === " ") {
            var result66 = " ";
            pos += 1;
          } else {
            var result66 = null;
            if (reportMatchFailures) {
              matchFailed("\" \"");
            }
          }
        }
        if (result62 !== null) {
          var result63 = parse_additive();
          if (result63 !== null) {
            var result64 = [];
            if (input.substr(pos, 1) === " ") {
              var result65 = " ";
              pos += 1;
            } else {
              var result65 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
            while (result65 !== null) {
              result64.push(result65);
              if (input.substr(pos, 1) === " ") {
                var result65 = " ";
                pos += 1;
              } else {
                var result65 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
            }
            if (result64 !== null) {
              var result60 = [result62, result63, result64];
            } else {
              var result60 = null;
              pos = savedPos5;
            }
          } else {
            var result60 = null;
            pos = savedPos5;
          }
        } else {
          var result60 = null;
          pos = savedPos5;
        }
        var result61 = result60 !== null
          ? (function(additive) { return additive; })(result60[1])
          : null;
        if (result61 !== null) {
          var result59 = result61;
        } else {
          var result59 = null;
          pos = savedPos4;
        }
        if (result59 !== null) {
          var result0 = result59;
        } else {
          var savedPos2 = pos;
          var savedPos3 = pos;
          var result33 = [];
          if (input.substr(pos, 1) === " ") {
            var result58 = " ";
            pos += 1;
          } else {
            var result58 = null;
            if (reportMatchFailures) {
              matchFailed("\" \"");
            }
          }
          while (result58 !== null) {
            result33.push(result58);
            if (input.substr(pos, 1) === " ") {
              var result58 = " ";
              pos += 1;
            } else {
              var result58 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
          }
          if (result33 !== null) {
            if (input.substr(pos, 3) === "rgb") {
              var result34 = "rgb";
              pos += 3;
            } else {
              var result34 = null;
              if (reportMatchFailures) {
                matchFailed("\"rgb\"");
              }
            }
            if (result34 !== null) {
              var result35 = [];
              if (input.substr(pos, 1) === " ") {
                var result57 = " ";
                pos += 1;
              } else {
                var result57 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
              while (result57 !== null) {
                result35.push(result57);
                if (input.substr(pos, 1) === " ") {
                  var result57 = " ";
                  pos += 1;
                } else {
                  var result57 = null;
                  if (reportMatchFailures) {
                    matchFailed("\" \"");
                  }
                }
              }
              if (result35 !== null) {
                if (input.substr(pos, 1) === "(") {
                  var result36 = "(";
                  pos += 1;
                } else {
                  var result36 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"(\"");
                  }
                }
                if (result36 !== null) {
                  var result37 = [];
                  if (input.substr(pos, 1) === " ") {
                    var result56 = " ";
                    pos += 1;
                  } else {
                    var result56 = null;
                    if (reportMatchFailures) {
                      matchFailed("\" \"");
                    }
                  }
                  while (result56 !== null) {
                    result37.push(result56);
                    if (input.substr(pos, 1) === " ") {
                      var result56 = " ";
                      pos += 1;
                    } else {
                      var result56 = null;
                      if (reportMatchFailures) {
                        matchFailed("\" \"");
                      }
                    }
                  }
                  if (result37 !== null) {
                    var result38 = parse_additive();
                    if (result38 !== null) {
                      var result39 = [];
                      if (input.substr(pos, 1) === " ") {
                        var result55 = " ";
                        pos += 1;
                      } else {
                        var result55 = null;
                        if (reportMatchFailures) {
                          matchFailed("\" \"");
                        }
                      }
                      while (result55 !== null) {
                        result39.push(result55);
                        if (input.substr(pos, 1) === " ") {
                          var result55 = " ";
                          pos += 1;
                        } else {
                          var result55 = null;
                          if (reportMatchFailures) {
                            matchFailed("\" \"");
                          }
                        }
                      }
                      if (result39 !== null) {
                        if (input.substr(pos, 1) === ",") {
                          var result40 = ",";
                          pos += 1;
                        } else {
                          var result40 = null;
                          if (reportMatchFailures) {
                            matchFailed("\",\"");
                          }
                        }
                        if (result40 !== null) {
                          var result41 = [];
                          if (input.substr(pos, 1) === " ") {
                            var result54 = " ";
                            pos += 1;
                          } else {
                            var result54 = null;
                            if (reportMatchFailures) {
                              matchFailed("\" \"");
                            }
                          }
                          while (result54 !== null) {
                            result41.push(result54);
                            if (input.substr(pos, 1) === " ") {
                              var result54 = " ";
                              pos += 1;
                            } else {
                              var result54 = null;
                              if (reportMatchFailures) {
                                matchFailed("\" \"");
                              }
                            }
                          }
                          if (result41 !== null) {
                            var result42 = parse_additive();
                            if (result42 !== null) {
                              var result43 = [];
                              if (input.substr(pos, 1) === " ") {
                                var result53 = " ";
                                pos += 1;
                              } else {
                                var result53 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\" \"");
                                }
                              }
                              while (result53 !== null) {
                                result43.push(result53);
                                if (input.substr(pos, 1) === " ") {
                                  var result53 = " ";
                                  pos += 1;
                                } else {
                                  var result53 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\" \"");
                                  }
                                }
                              }
                              if (result43 !== null) {
                                if (input.substr(pos, 1) === ",") {
                                  var result44 = ",";
                                  pos += 1;
                                } else {
                                  var result44 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\",\"");
                                  }
                                }
                                if (result44 !== null) {
                                  var result45 = [];
                                  if (input.substr(pos, 1) === " ") {
                                    var result52 = " ";
                                    pos += 1;
                                  } else {
                                    var result52 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\" \"");
                                    }
                                  }
                                  while (result52 !== null) {
                                    result45.push(result52);
                                    if (input.substr(pos, 1) === " ") {
                                      var result52 = " ";
                                      pos += 1;
                                    } else {
                                      var result52 = null;
                                      if (reportMatchFailures) {
                                        matchFailed("\" \"");
                                      }
                                    }
                                  }
                                  if (result45 !== null) {
                                    var result46 = parse_additive();
                                    if (result46 !== null) {
                                      var result47 = [];
                                      if (input.substr(pos, 1) === " ") {
                                        var result51 = " ";
                                        pos += 1;
                                      } else {
                                        var result51 = null;
                                        if (reportMatchFailures) {
                                          matchFailed("\" \"");
                                        }
                                      }
                                      while (result51 !== null) {
                                        result47.push(result51);
                                        if (input.substr(pos, 1) === " ") {
                                          var result51 = " ";
                                          pos += 1;
                                        } else {
                                          var result51 = null;
                                          if (reportMatchFailures) {
                                            matchFailed("\" \"");
                                          }
                                        }
                                      }
                                      if (result47 !== null) {
                                        if (input.substr(pos, 1) === ")") {
                                          var result48 = ")";
                                          pos += 1;
                                        } else {
                                          var result48 = null;
                                          if (reportMatchFailures) {
                                            matchFailed("\")\"");
                                          }
                                        }
                                        if (result48 !== null) {
                                          var result49 = [];
                                          if (input.substr(pos, 1) === " ") {
                                            var result50 = " ";
                                            pos += 1;
                                          } else {
                                            var result50 = null;
                                            if (reportMatchFailures) {
                                              matchFailed("\" \"");
                                            }
                                          }
                                          while (result50 !== null) {
                                            result49.push(result50);
                                            if (input.substr(pos, 1) === " ") {
                                              var result50 = " ";
                                              pos += 1;
                                            } else {
                                              var result50 = null;
                                              if (reportMatchFailures) {
                                                matchFailed("\" \"");
                                              }
                                            }
                                          }
                                          if (result49 !== null) {
                                            var result31 = [result33, result34, result35, result36, result37, result38, result39, result40, result41, result42, result43, result44, result45, result46, result47, result48, result49];
                                          } else {
                                            var result31 = null;
                                            pos = savedPos3;
                                          }
                                        } else {
                                          var result31 = null;
                                          pos = savedPos3;
                                        }
                                      } else {
                                        var result31 = null;
                                        pos = savedPos3;
                                      }
                                    } else {
                                      var result31 = null;
                                      pos = savedPos3;
                                    }
                                  } else {
                                    var result31 = null;
                                    pos = savedPos3;
                                  }
                                } else {
                                  var result31 = null;
                                  pos = savedPos3;
                                }
                              } else {
                                var result31 = null;
                                pos = savedPos3;
                              }
                            } else {
                              var result31 = null;
                              pos = savedPos3;
                            }
                          } else {
                            var result31 = null;
                            pos = savedPos3;
                          }
                        } else {
                          var result31 = null;
                          pos = savedPos3;
                        }
                      } else {
                        var result31 = null;
                        pos = savedPos3;
                      }
                    } else {
                      var result31 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result31 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result31 = null;
                  pos = savedPos3;
                }
              } else {
                var result31 = null;
                pos = savedPos3;
              }
            } else {
              var result31 = null;
              pos = savedPos3;
            }
          } else {
            var result31 = null;
            pos = savedPos3;
          }
          var result32 = result31 !== null
            ? (function(r, g, b) { return Shade.Colors.rgb(r, g, b); })(result31[5], result31[9], result31[13])
            : null;
          if (result32 !== null) {
            var result30 = result32;
          } else {
            var result30 = null;
            pos = savedPos2;
          }
          if (result30 !== null) {
            var result0 = result30;
          } else {
            var savedPos0 = pos;
            var savedPos1 = pos;
            var result4 = [];
            if (input.substr(pos, 1) === " ") {
              var result29 = " ";
              pos += 1;
            } else {
              var result29 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
            while (result29 !== null) {
              result4.push(result29);
              if (input.substr(pos, 1) === " ") {
                var result29 = " ";
                pos += 1;
              } else {
                var result29 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
            }
            if (result4 !== null) {
              if (input.substr(pos, 3) === "hcl") {
                var result5 = "hcl";
                pos += 3;
              } else {
                var result5 = null;
                if (reportMatchFailures) {
                  matchFailed("\"hcl\"");
                }
              }
              if (result5 !== null) {
                var result6 = [];
                if (input.substr(pos, 1) === " ") {
                  var result28 = " ";
                  pos += 1;
                } else {
                  var result28 = null;
                  if (reportMatchFailures) {
                    matchFailed("\" \"");
                  }
                }
                while (result28 !== null) {
                  result6.push(result28);
                  if (input.substr(pos, 1) === " ") {
                    var result28 = " ";
                    pos += 1;
                  } else {
                    var result28 = null;
                    if (reportMatchFailures) {
                      matchFailed("\" \"");
                    }
                  }
                }
                if (result6 !== null) {
                  if (input.substr(pos, 1) === "(") {
                    var result7 = "(";
                    pos += 1;
                  } else {
                    var result7 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"(\"");
                    }
                  }
                  if (result7 !== null) {
                    var result8 = [];
                    if (input.substr(pos, 1) === " ") {
                      var result27 = " ";
                      pos += 1;
                    } else {
                      var result27 = null;
                      if (reportMatchFailures) {
                        matchFailed("\" \"");
                      }
                    }
                    while (result27 !== null) {
                      result8.push(result27);
                      if (input.substr(pos, 1) === " ") {
                        var result27 = " ";
                        pos += 1;
                      } else {
                        var result27 = null;
                        if (reportMatchFailures) {
                          matchFailed("\" \"");
                        }
                      }
                    }
                    if (result8 !== null) {
                      var result9 = parse_additive();
                      if (result9 !== null) {
                        var result10 = [];
                        if (input.substr(pos, 1) === " ") {
                          var result26 = " ";
                          pos += 1;
                        } else {
                          var result26 = null;
                          if (reportMatchFailures) {
                            matchFailed("\" \"");
                          }
                        }
                        while (result26 !== null) {
                          result10.push(result26);
                          if (input.substr(pos, 1) === " ") {
                            var result26 = " ";
                            pos += 1;
                          } else {
                            var result26 = null;
                            if (reportMatchFailures) {
                              matchFailed("\" \"");
                            }
                          }
                        }
                        if (result10 !== null) {
                          if (input.substr(pos, 1) === ",") {
                            var result11 = ",";
                            pos += 1;
                          } else {
                            var result11 = null;
                            if (reportMatchFailures) {
                              matchFailed("\",\"");
                            }
                          }
                          if (result11 !== null) {
                            var result12 = [];
                            if (input.substr(pos, 1) === " ") {
                              var result25 = " ";
                              pos += 1;
                            } else {
                              var result25 = null;
                              if (reportMatchFailures) {
                                matchFailed("\" \"");
                              }
                            }
                            while (result25 !== null) {
                              result12.push(result25);
                              if (input.substr(pos, 1) === " ") {
                                var result25 = " ";
                                pos += 1;
                              } else {
                                var result25 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\" \"");
                                }
                              }
                            }
                            if (result12 !== null) {
                              var result13 = parse_additive();
                              if (result13 !== null) {
                                var result14 = [];
                                if (input.substr(pos, 1) === " ") {
                                  var result24 = " ";
                                  pos += 1;
                                } else {
                                  var result24 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\" \"");
                                  }
                                }
                                while (result24 !== null) {
                                  result14.push(result24);
                                  if (input.substr(pos, 1) === " ") {
                                    var result24 = " ";
                                    pos += 1;
                                  } else {
                                    var result24 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\" \"");
                                    }
                                  }
                                }
                                if (result14 !== null) {
                                  if (input.substr(pos, 1) === ",") {
                                    var result15 = ",";
                                    pos += 1;
                                  } else {
                                    var result15 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\",\"");
                                    }
                                  }
                                  if (result15 !== null) {
                                    var result16 = [];
                                    if (input.substr(pos, 1) === " ") {
                                      var result23 = " ";
                                      pos += 1;
                                    } else {
                                      var result23 = null;
                                      if (reportMatchFailures) {
                                        matchFailed("\" \"");
                                      }
                                    }
                                    while (result23 !== null) {
                                      result16.push(result23);
                                      if (input.substr(pos, 1) === " ") {
                                        var result23 = " ";
                                        pos += 1;
                                      } else {
                                        var result23 = null;
                                        if (reportMatchFailures) {
                                          matchFailed("\" \"");
                                        }
                                      }
                                    }
                                    if (result16 !== null) {
                                      var result17 = parse_additive();
                                      if (result17 !== null) {
                                        var result18 = [];
                                        if (input.substr(pos, 1) === " ") {
                                          var result22 = " ";
                                          pos += 1;
                                        } else {
                                          var result22 = null;
                                          if (reportMatchFailures) {
                                            matchFailed("\" \"");
                                          }
                                        }
                                        while (result22 !== null) {
                                          result18.push(result22);
                                          if (input.substr(pos, 1) === " ") {
                                            var result22 = " ";
                                            pos += 1;
                                          } else {
                                            var result22 = null;
                                            if (reportMatchFailures) {
                                              matchFailed("\" \"");
                                            }
                                          }
                                        }
                                        if (result18 !== null) {
                                          if (input.substr(pos, 1) === ")") {
                                            var result19 = ")";
                                            pos += 1;
                                          } else {
                                            var result19 = null;
                                            if (reportMatchFailures) {
                                              matchFailed("\")\"");
                                            }
                                          }
                                          if (result19 !== null) {
                                            var result20 = [];
                                            if (input.substr(pos, 1) === " ") {
                                              var result21 = " ";
                                              pos += 1;
                                            } else {
                                              var result21 = null;
                                              if (reportMatchFailures) {
                                                matchFailed("\" \"");
                                              }
                                            }
                                            while (result21 !== null) {
                                              result20.push(result21);
                                              if (input.substr(pos, 1) === " ") {
                                                var result21 = " ";
                                                pos += 1;
                                              } else {
                                                var result21 = null;
                                                if (reportMatchFailures) {
                                                  matchFailed("\" \"");
                                                }
                                              }
                                            }
                                            if (result20 !== null) {
                                              var result2 = [result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15, result16, result17, result18, result19, result20];
                                            } else {
                                              var result2 = null;
                                              pos = savedPos1;
                                            }
                                          } else {
                                            var result2 = null;
                                            pos = savedPos1;
                                          }
                                        } else {
                                          var result2 = null;
                                          pos = savedPos1;
                                        }
                                      } else {
                                        var result2 = null;
                                        pos = savedPos1;
                                      }
                                    } else {
                                      var result2 = null;
                                      pos = savedPos1;
                                    }
                                  } else {
                                    var result2 = null;
                                    pos = savedPos1;
                                  }
                                } else {
                                  var result2 = null;
                                  pos = savedPos1;
                                }
                              } else {
                                var result2 = null;
                                pos = savedPos1;
                              }
                            } else {
                              var result2 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result2 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result2 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result2 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result2 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result2 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result2 = null;
                  pos = savedPos1;
                }
              } else {
                var result2 = null;
                pos = savedPos1;
              }
            } else {
              var result2 = null;
              pos = savedPos1;
            }
            var result3 = result2 !== null
              ? (function(h, c, l) { return Shade.Colors.hcl(h, c, l); })(result2[5], result2[9], result2[13])
              : null;
            if (result3 !== null) {
              var result1 = result3;
            } else {
              var result1 = null;
              pos = savedPos0;
            }
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_additive() {
        var cacheKey = 'additive@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        var savedPos3 = pos;
        var result15 = parse_multiplicative();
        if (result15 !== null) {
          var result16 = [];
          if (input.substr(pos, 1) === " ") {
            var result21 = " ";
            pos += 1;
          } else {
            var result21 = null;
            if (reportMatchFailures) {
              matchFailed("\" \"");
            }
          }
          while (result21 !== null) {
            result16.push(result21);
            if (input.substr(pos, 1) === " ") {
              var result21 = " ";
              pos += 1;
            } else {
              var result21 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
          }
          if (result16 !== null) {
            if (input.substr(pos, 1) === "+") {
              var result17 = "+";
              pos += 1;
            } else {
              var result17 = null;
              if (reportMatchFailures) {
                matchFailed("\"+\"");
              }
            }
            if (result17 !== null) {
              var result18 = [];
              if (input.substr(pos, 1) === " ") {
                var result20 = " ";
                pos += 1;
              } else {
                var result20 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
              while (result20 !== null) {
                result18.push(result20);
                if (input.substr(pos, 1) === " ") {
                  var result20 = " ";
                  pos += 1;
                } else {
                  var result20 = null;
                  if (reportMatchFailures) {
                    matchFailed("\" \"");
                  }
                }
              }
              if (result18 !== null) {
                var result19 = parse_additive();
                if (result19 !== null) {
                  var result13 = [result15, result16, result17, result18, result19];
                } else {
                  var result13 = null;
                  pos = savedPos3;
                }
              } else {
                var result13 = null;
                pos = savedPos3;
              }
            } else {
              var result13 = null;
              pos = savedPos3;
            }
          } else {
            var result13 = null;
            pos = savedPos3;
          }
        } else {
          var result13 = null;
          pos = savedPos3;
        }
        var result14 = result13 !== null
          ? (function(left, right) { return Shade.add(left, right); })(result13[0], result13[4])
          : null;
        if (result14 !== null) {
          var result12 = result14;
        } else {
          var result12 = null;
          pos = savedPos2;
        }
        if (result12 !== null) {
          var result0 = result12;
        } else {
          var savedPos0 = pos;
          var savedPos1 = pos;
          var result5 = parse_multiplicative();
          if (result5 !== null) {
            var result6 = [];
            if (input.substr(pos, 1) === " ") {
              var result11 = " ";
              pos += 1;
            } else {
              var result11 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
            while (result11 !== null) {
              result6.push(result11);
              if (input.substr(pos, 1) === " ") {
                var result11 = " ";
                pos += 1;
              } else {
                var result11 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
            }
            if (result6 !== null) {
              if (input.substr(pos, 1) === "-") {
                var result7 = "-";
                pos += 1;
              } else {
                var result7 = null;
                if (reportMatchFailures) {
                  matchFailed("\"-\"");
                }
              }
              if (result7 !== null) {
                var result8 = [];
                if (input.substr(pos, 1) === " ") {
                  var result10 = " ";
                  pos += 1;
                } else {
                  var result10 = null;
                  if (reportMatchFailures) {
                    matchFailed("\" \"");
                  }
                }
                while (result10 !== null) {
                  result8.push(result10);
                  if (input.substr(pos, 1) === " ") {
                    var result10 = " ";
                    pos += 1;
                  } else {
                    var result10 = null;
                    if (reportMatchFailures) {
                      matchFailed("\" \"");
                    }
                  }
                }
                if (result8 !== null) {
                  var result9 = parse_additive();
                  if (result9 !== null) {
                    var result3 = [result5, result6, result7, result8, result9];
                  } else {
                    var result3 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result3 = null;
                  pos = savedPos1;
                }
              } else {
                var result3 = null;
                pos = savedPos1;
              }
            } else {
              var result3 = null;
              pos = savedPos1;
            }
          } else {
            var result3 = null;
            pos = savedPos1;
          }
          var result4 = result3 !== null
            ? (function(left, right) { return Shade.sub(left, right); })(result3[0], result3[4])
            : null;
          if (result4 !== null) {
            var result2 = result4;
          } else {
            var result2 = null;
            pos = savedPos0;
          }
          if (result2 !== null) {
            var result0 = result2;
          } else {
            var result1 = parse_multiplicative();
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_multiplicative() {
        var cacheKey = 'multiplicative@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos4 = pos;
        var savedPos5 = pos;
        var result25 = parse_primary();
        if (result25 !== null) {
          var result26 = [];
          if (input.substr(pos, 1) === " ") {
            var result31 = " ";
            pos += 1;
          } else {
            var result31 = null;
            if (reportMatchFailures) {
              matchFailed("\" \"");
            }
          }
          while (result31 !== null) {
            result26.push(result31);
            if (input.substr(pos, 1) === " ") {
              var result31 = " ";
              pos += 1;
            } else {
              var result31 = null;
              if (reportMatchFailures) {
                matchFailed("\" \"");
              }
            }
          }
          if (result26 !== null) {
            if (input.substr(pos, 1) === "*") {
              var result27 = "*";
              pos += 1;
            } else {
              var result27 = null;
              if (reportMatchFailures) {
                matchFailed("\"*\"");
              }
            }
            if (result27 !== null) {
              var result28 = [];
              if (input.substr(pos, 1) === " ") {
                var result30 = " ";
                pos += 1;
              } else {
                var result30 = null;
                if (reportMatchFailures) {
                  matchFailed("\" \"");
                }
              }
              while (result30 !== null) {
                result28.push(result30);
                if (input.substr(pos, 1) === " ") {
                  var result30 = " ";
                  pos += 1;
                } else {
                  var result30 = null;
                  if (reportMatchFailures) {
                    matchFailed("\" \"");
                  }
                }
              }
              if (result28 !== null) {
                var result29 = parse_multiplicative();
                if (result29 !== null) {
                  var result23 = [result25, result26, result27, result28, result29];
                } else {
                  var result23 = null;
                  pos = savedPos5;
                }
              } else {
                var result23 = null;
                pos = savedPos5;
